[gd_scene load_steps=4 format=3 uid="uid://bq6bx45g18kwp"]

[ext_resource type="Texture2D" uid="uid://7uufcghrvdeb" path="res://assets/player/SPRITE_PORTRAIT.png" id="1_08cpx"]
[ext_resource type="Script" uid="uid://bnowib50vwvmv" path="res://assets/script/control.gd" id="1_o552d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o552d"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
script = ExtResource("1_o552d")

[node name="DimOverlay" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(28.84, 16.320002)
color = Color(0, 0, 0, 0.7019608)

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 5.0
offset_top = 134.0
offset_right = 167.0
offset_bottom = 176.0
scale = Vector2(1, 0.97916424)
theme_override_font_sizes/font_size = 30
text = "SCORE: 190"

[node name="GameOverPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 405.0
offset_top = 251.0
offset_right = 405.0
offset_bottom = 251.0
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_o552d")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 0
offset_top = 1.0
offset_right = 342.0
offset_bottom = 119.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameOverLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.71, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "GAME OVER!"

[node name="PlayAgainButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "PLAY AGAIN"

[node name="WinPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 405.0
offset_top = 251.0
offset_right = 405.0
offset_bottom = 251.0
scale = Vector2(1, 1.0190662)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_o552d")

[node name="VBoxContainer" type="VBoxContainer" parent="WinPanel"]
layout_mode = 0
offset_top = 1.0
offset_right = 342.0
offset_bottom = 175.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="WinLabel" type="Label" parent="WinPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9636667, 0.98, 0, 1)
theme_override_font_sizes/font_size = 60
text = "VICTORY!"

[node name="PlayAgainButton" type="Button" parent="WinPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "PLAY AGAIN"

[node name="MainMenuButton" type="Button" parent="WinPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "MAIN MENU"

[node name="PausePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 263.0
offset_right = 410.0
offset_bottom = 263.0
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_o552d")

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 0
offset_top = 1.0
offset_right = 342.0
offset_bottom = 119.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "RESUME"

[node name="MainMenuButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "MAIN MENU"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 231.0
offset_bottom = 112.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Potrait" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_08cpx")
expand_mode = 2
stretch_mode = 5

[node name="BarsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HealthBar" type="VBoxContainer" parent="MarginContainer/HBoxContainer/BarsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/BarsContainer/HealthBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "HP: 100/100"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/BarsContainer/HealthBar"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
value = 100.0

[node name="EnergyBar" type="VBoxContainer" parent="MarginContainer/HBoxContainer/BarsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/BarsContainer/EnergyBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "EN: 100/100"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/BarsContainer/EnergyBar"]
layout_mode = 2
value = 100.0
